Pre-release cleanup